2007-07-16  Akim Demaille  <demaille@gostai.com>

	Remove libport.mk
	libport.mk no longer exists, it became more of a problem than a
	solution.  From now on, shipped libports must be used with its
	own Makefile.am, which means that the following changes must be
	done by the users:
	- stop including libport.mk
	- add libport in the beginning of the top-level Makefile.am's
	  SUBDIRS.
	* libport.mk: Remove...
	* Makefile.am: inlined here.
	* libport-sources.mk (libport_la): Fix location.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Makefile.am
	* Makefile.am: New.
	Now users of a shipped libport should no longer include
	libport.mk nor libport-sources.mk, rather they should use
	this file like for any other directory.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	* shared-ptr.hh, shared-ptr.hxx (make_shared_ptr): New.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Simplify/improve deref
	* deref.hxx: Remove useless this->.
	Don't dump core on null pointers.

2007-07-11  Akim Demaille  <demaille@gostai.com>

	libport::pair
	* pair.hh, pair.hxx: New.
	* README, libport.mk: Adjust.

2007-07-11  Akim Demaille  <demaille@gostai.com>

	Add contract, deref, and separator.
	* libport/contract.cc, libport/contract.hh, libport/deref.cc,
	* libport/deref.hh, libport/deref.hxx, libport/separator.hh,
	* libport/separator.hxx, libport/tests/test-deref.cc,
	* libport/tests/test-separator.cc:
	New.
	* libport/libport-sources.mk, libport/libport.mk, libport/README,
	* libport/tests/Makefile.am:
	Update.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	libport.la
	* libport/libport.mk (noinst_LTLIBRARIES): Build libport.la.
	* libport/tests/Makefile.am: Use it.
	* libport/libport-sources.mk (libport_la): New.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	Fixes
	* libport/containers.hh: Formatting changes.
	* libport/fwd.hh: Don't try to fwddecl hash.
	Fwddecl Symbol.
	* libport/hash.hh: Be ready to hash on Symbols.
	* libport/indent.cc: Use cassert.
